--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -390,8 +390,8 @@ height: 350px}
       <section class="hero">
       <h1 class="text-dark">Welcome to Trading Hub</h1>
       <p class="lead text-dark">Join our platform and start trading with ease. Invite friends and earn rewards!</p>
-	  <div style="display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f8f9fa;">
-  <div class="card border-danger mb-3" style="width: 25rem; height: 23rem;">
+	  <div style="display: flex; justify-content: center; align-items: center; min-height: 75vh; background-color: #f8f9fa;">
+  <div class="card border-danger mb-3" style="width: 25rem; height: 25rem;">
     <div class="card-body">
       <section class="referral" style="text-align: center;">
         <h2>$0.00</h2>
@@ -574,13 +574,10 @@ height: 350px}
 	
 	<div class="cards text-center">
   <div class="text-center py-4">
-    <!-- Toggle Button -->
-    <button class="btn btn-danger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        View more
-    </button>
+   
 </div>
 
-<!-- Collapsible Content -->
+
   <div class="drop-collapse" id="collapseExample">
     <div class="card card-body">
       <div class="py-0 text-center">
@@ -882,19 +879,22 @@ height: 350px}
     </div><!-- /.row -->
 </div>
 </div>
- <div class="text-center py-4">
-    <!-- Toggle Button -->
-    <button class="btn btn-danger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        View less
-    </button>
-</div>
+ 
 </div>
 </div>
 </div> 
 </div>
 </div>
 </div><!-- /.col-lg-4 -->
-
+	<div class="px-4">
+ <p class="float-end">
+  <a href="#" class="back-to-top" aria-label="Back to top">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M12 19V6m0 0l-7 7m7-7l7 7"/>
+    </svg>
+  </a>
+</p>
+	</div>
 
     <!-- /END THE FEATURETTES -->
 
@@ -908,13 +908,7 @@ height: 350px}
 
   <!-- FOOTER -->
   <footer class="container">
-   <p class="float-end">
-  <a href="#" class="back-to-top" aria-label="Back to top">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M12 19V6m0 0l-7 7m7-7l7 7"/>
-    </svg>
-  </a>
-</p>
+  
 
     <div class="footer-container">
     <p class="footer-text">Trading Hub Inc &middot; <span>&copy; 2017 – 2024</span></p>
