--- a/sign-in/deposit.html
+++ b/sign-in/deposit.html
@@ -135,10 +135,10 @@
             readonly 
             value="https://link.trustwallet.com/send?asset=c60&address=0x6416C13465D6117692B22fa40c2D0fdF7C2657fd"
           >
-          <button class="btn custom-btn-danger" id="copyBtn">Copy</button>
+          <button class="btn btn-danger" id="copyBtn">Copy</button>
         </div>
 
-        <p class="text-muted">Scan QR or copy link to deposit</p>
+        <p class="text-muted">Use QR or link to deposit funds.</p>
 
         <!-- Button to Open Deposit Link -->
         <a 
@@ -146,7 +146,7 @@
           href="https://link.trustwallet.com/send?asset=c60&address=0x6416C13465D6117692B22fa40c2D0fdF7C2657fd"
           title="Make a deposit" 
           target="_blank"
-          class="btn custom-btn-danger mb-2"
+          class="btn btn-danger mb-2"
         >
           Deposit Now
         </a>
