--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -500,9 +500,9 @@ height: 350px}
     <text x="50%" y="50%" fill="#777" dy=".3em"></text>
 </svg>
 
-        <h2 class="fw-normal">Moon Trades <img src="../images/verified.png" width="40" height="40" x="0" y="0"></h2><br>
-        <p>Return Rate: 96.24% | 
-           Followers: 237 |
+        <h2 class="fw-normal"> David Trades <img src="../images/verified.png" width="40" height="40" x="0" y="0"></h2><br>
+        <p>Return Rate: 98.79% | 
+           Followers: 9265 |
            Profit Share: 20%</p>
         <p><a class="btn btn-secondary" href="copy2.html">View details &raquo;</a></p>
 		<!-- Hidden SVG Definitions -->
