--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -496,7 +496,7 @@ height: 350px}
         <svg class="bd-placeholder-img rounded-circle" style=" width: 140px; height: 140px;" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
     <title>Trader</title>
     <rect width="100%" height="100%" fill="#777"/>
-    <image href="../images/moon.png" width="140" height="140" x="0" y="0"/>
+    <image href="../images/david.png" width="140" height="140" x="0" y="0"/>
     <text x="50%" y="50%" fill="#777" dy=".3em"></text>
 </svg>
 
