--- a/sign-in/copy3.html
+++ b/sign-in/copy3.html
@@ -10,94 +10,67 @@
     <title>Dividend Dude v5.2</title>
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        margin: 0;
-		padding: 2rem;
-      }
-
-      .card {
-    width: 80%;
-    max-width: 380px; /* Adjusted for small screens */
-    background: linear-gradient(90deg, #16122a, #182828, #16122a);
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto; /* Centers the card horizontally */
-    position: relative; /* Allows positioning of pseudo-elements */
+     .bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
-.card::before {
-    content: "";
-    position: absolute;
-    top: -4px;
-    left: -4px;
-    right: -4px;
-    bottom: -4px;
-    border-radius: 12px;
-    background: linear-gradient(90deg, rgba(255, 165, 0, 0.2), rgba(255, 140, 0, 0.1), rgba(255, 165, 0, 0.2));
-    z-index: -1;
-    animation: border-glisten 3s ease-in-out infinite; /* More visible glisten animation */
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
 
-@keyframes border-glisten {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: solid rgba(0, 0, 0, 0.15);
+  border-width: 1px 0;
+  box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1), inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
 }
 
-@keyframes glisten {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+/* BODY LAYOUT */
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 2rem;
+  background-color: #121212;
+  color: #f0f0f0;
 }
 
-      .card img {
-        border-radius: 10px 10px 0 0;
-		padding: 0.1rem;
-      }
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
 
+.bi {
+  vertical-align: -0.125em;
+  fill: currentColor;
+}
 
-      .card-title {
-        font-size: 1.25rem;
-        margin-bottom: 1rem;
-      }
+/* NAV SCROLLER */
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
 
-      .container {
-        padding: 0 1rem;
-      }
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem
 
-      footer {
-        text-align: center;
-        margin-top: 2rem;
-      }
-
-      @media (max-width: 768px) {
-        .card-title {
-          font-size: 1.1rem; /* Adjust title size for smaller screens */
-        }
-      }
     </style>
  
-  <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+ <link href="cover.css" rel="stylesheet">
   </head>
   <body class="d-flex h-100 text-center text-bg-dark">
     <div class="position-absolute top-0 start-0 p-3">
@@ -122,56 +95,67 @@
       </nav>
     </div>
   </header><br><br>
-  <body>
-    <div>
-      <div class="card text-end">
-        <img src="../images/dude.png" style="max-width: 100%; height: auto;" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center text-white">Dividend Dude</h5>
-        </div>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">TRADES</div>
-            <div class="col">306</div>
-          </div>
-        </div><br>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">TOTAL WINS</div>
-            <div class="col">292</div>
-          </div>
-        </div><br>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">FOLLOWERS</div>
-            <div class="col">164</div>
-          </div>
-        </div><br>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">TOTAL LOSSES</div>
-            <div class="col">14</div>
-          </div>
-        </div><br>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">WIN PERCENT</div>
-            <div class="col">92.53%</div>
-          </div>
-        </div><br>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">PROFIT SHARE</div>
-            <div class="col">10%</div>
-          </div>
-        </div><br>
-      </div>
-	 
- 
-      <footer>
-            <p class="h3"><strong>Trading Hub </strong></a></p> 
-			<p class="lead"> by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-      </footer>
+   <div style="display: flex; justify-content: center; align-items: center; min-height: 120vh; padding: 20px; background-color: #121212;">
+  <div class="card text-white" style="width: 100%; max-width: 40rem; height: 42em; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
+
+    <!-- Profile Image -->
+    <div class="text-center mb-4">
+      <img src="../images/moon.png" alt="Moon Trades" style="width: 140px; height: 140px; border-radius: 50%; border: 2px solid #fff;">
     </div>
+
+    <div class="card-body text-center">
+      <h4 class="card-title mb-4"><strong>Moon Trades</strong></h4>
+
+      <!-- Trade Stats with alternating colors -->
+      <div class="container text-start">
+        <div class="row py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col">TRADES</div>
+          <div class="col text-end">276</div>
+        </div>
+
+        <div class="row py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col">TOTAL WINS</div>
+          <div class="col text-end">292</div>
+        </div>
+
+        <div class="row py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col">FOLLOWERS</div>
+          <div class="col text-end">164</div>
+        </div>
+
+        <div class="row py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col">TOTAL LOSSES</div>
+          <div class="col text-end">18</div>
+        </div>
+
+        <div class="row py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col">WIN PERCENT</div>
+          <div class="col text-end">92.53%</div>
+        </div>
+
+        <div class="row py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col">PROFIT SHARE</div>
+          <div class="col text-end">10%</div>
+        </div>
+      </div>
+<br>
+      <!-- Footer -->
+    <!-- Footer -->
+<footer class="footer mt-5 py-4 text-center">
+  <div class="container">
+    <h5 class="footer-title mb-2"> <strong>Trading Hub</strong></h5>
+    <p class="footer-text">
+      Built with passion by 
+      <a href="https://twitter.com/mdo" target="_blank" class="footer-link">@mdo</a>
+    </p>
+  </div>
+</footer>
+
+    </div>
+  </div>
+</div>
+
+
+    
   </body>
 </html>
