--- a/sign-in/copy3.html
+++ b/sign-in/copy3.html
@@ -100,11 +100,11 @@ body {
 
     <!-- Profile Image -->
     <div class="text-center mb-4">
-      <img src="../images/moon.png" alt="Moon Trades" style="width: 140px; height: 140px; border-radius: 50%; border: 2px solid #fff;">
+      <img src="../images/dude.png" alt="Dividend Dude" style="width: 140px; height: 140px; border-radius: 50%; border: 2px solid #fff;">
     </div>
 
     <div class="card-body text-center">
-      <h4 class="card-title mb-4"><strong>Moon Trades</strong></h4>
+      <h4 class="card-title mb-4"><strong>Dividend Dude</strong></h4>
 
       <!-- Trade Stats with alternating colors -->
       <div class="container text-start">
