--- a/sign-in/copy.html
+++ b/sign-in/copy.html
@@ -110,7 +110,7 @@ body {
 
     <!-- Profile Image -->
     <div class="text-center mb-4">
-      <img src="../images/wiz.png" alt="Moon Trades" style="width: 140px; height: 140px; border-radius: 50%; border: 2px solid #fff;">
+      <img src="../images/wiz.png" alt="Bitcoin Wizard" style="width: 140px; height: 140px; border-radius: 50%; border: 2px solid #fff;">
     </div>
 
     <div class="card-body text-center">
