--- a/sign-in/copy2.html
+++ b/sign-in/copy2.html
@@ -18,6 +18,16 @@
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
    <style>
+	   #liveAlertPlaceholder {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1050;
+      display: flex;
+      justify-content: center; 
+      pointer-events: none; 
+    }
       .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
@@ -115,7 +125,14 @@ body {
 
     <div class="card-body text-center">
       <h4 class="card-title mb-4"><strong>David Trades</strong></h4>
+<div id="liveAlertPlaceholder"></div>
 
+   
+<div class="d-flex w-100 justify-content-center mb-3">
+  <button type="button" class="btn btn-success btn-sm copy-btn px-4 py-2" style="min-width: 200px;" data-message="Successfully Copied!">
+    Copy
+  </button>
+</div>
       <!-- Trade Stats with alternating colors -->
       <div class="container text-start">
         <div class="row py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
@@ -166,6 +183,6 @@ body {
 </div>
 
 
-    
+    <script src="success.js"></script> 
   </body>
 </html>
