--- a/sign-in/copy3.html
+++ b/sign-in/copy3.html
@@ -10,6 +10,16 @@
     <title>Dividend Dude v5.2</title>
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+	    #liveAlertPlaceholder {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1050;
+      display: flex;
+      justify-content: center; 
+      pointer-events: none; 
+    }
      .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
@@ -97,7 +107,14 @@ body {
   </header><br><br>
    <div style="display: flex; justify-content: center; align-items: center; min-height: 120vh; padding: 20px; background-color: #121212;">
   <div class="card text-white" style="width: 100%; max-width: 50rem; height: 50em; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
+ <div id="liveAlertPlaceholder"></div>
 
+   
+<div class="d-flex w-100 justify-content-center mb-3">
+  <button type="button" class="btn btn-success btn-sm copy-btn px-4 py-2" style="min-width: 200px;" data-message="Successfully Copied!">
+    Copy
+  </button>
+</div>
     <!-- Profile Image -->
     <div class="text-center mb-4">
       <img src="../images/dude.png" alt="Dividend Dude" style="width: 140px; height: 140px; border-radius: 50%; border: 2px solid #fff;">
@@ -155,7 +172,7 @@ body {
   </div>
 </div>
 
-
+<script src="success.js"></script> 
     
   </body>
 </html>
