--- a/sign-in/copy3.html
+++ b/sign-in/copy3.html
@@ -106,7 +106,7 @@ body {
     </div>
   </header><br><br>
    <div style="display: flex; justify-content: center; align-items: center; min-height: 120vh; padding: 20px; background-color: #121212;">
-  <div class="card text-white" style="width: 100%; max-width: 50rem; height: 50em; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
+  <div class="card text-white" style="width: 100%; max-width: 50rem; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
  <div id="liveAlertPlaceholder"></div>
 
    
