--- a/sign-in/copy.html
+++ b/sign-in/copy.html
@@ -100,7 +100,7 @@ body {
   </a>
 </div>
 
-
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
 	
@@ -114,9 +114,9 @@ body {
     </div>
   </header><br><br>
   
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  
 <div style="display: flex; justify-content: center; align-items: center; min-height: 120vh; padding: 20px; background-color: #121212;">
-  <div class="card text-white" style="width: 100%; max-width: 50rem; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
+  <div class="card text-white" style="width: 100%; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
 
     <!-- Profile Image -->
     <div class="text-center mb-4">
