--- a/sign-in/copy2.html
+++ b/sign-in/copy2.html
@@ -116,7 +116,7 @@ body {
     </div>
   </header><br><br>
    <div style="display: flex; justify-content: center; align-items: center; min-height: 120vh; padding: 20px; background-color: #121212;">
-  <div class="card text-white" style="width: 100%; max-width: 50rem; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
+  <div class="card text-white" style="width: 100%; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
 
     <!-- Profile Image -->
     <div class="text-center mb-4">
@@ -166,21 +166,13 @@ body {
         </div>
       </div>
 <br>
-      <!-- Footer -->
-    <!-- Footer -->
-<footer class="footer mt-5 py-4 text-center">
-  <div class="container">
-    <h5 class="footer-title mb-2"> <strong>Trading Hub</strong></h5>
-    <p class="footer-text">
-      Built with passion by 
-      <a href="https://twitter.com/mdo" target="_blank" class="footer-link">@mdo</a>
-    </p>
-  </div>
-</footer>
+      
 
     </div>
   </div>
 </div>
+</div>
+	  <div>
 
 
     <script src="success.js"></script> 
