--- a/sign-in/copy3.html
+++ b/sign-in/copy3.html
@@ -125,34 +125,34 @@ body {
   </button>
       <!-- Trade Stats with alternating colors -->
       <div class="container text-start">
-        <div class="row py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
-          <div class="col">TRADES</div>
-          <div class="col text-end">276</div>
+        <div class="row w-100 mx-0 py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col-6">TRADES</div>
+          <div class="col-6 text-end">276</div>
         </div>
 
-        <div class="row py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
-          <div class="col">TOTAL WINS</div>
-          <div class="col text-end">292</div>
+        <div class="row w-100 mx-0 py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col-6">TOTAL WINS</div>
+          <div class="col-6 text-end">292</div>
         </div>
 
-        <div class="row py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
-          <div class="col">FOLLOWERS</div>
-          <div class="col text-end">164</div>
+        <div class="row w-100 mx-0 py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col-6">FOLLOWERS</div>
+          <div class="col-6 text-end">164</div>
         </div>
 
-        <div class="row py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
-          <div class="col">TOTAL LOSSES</div>
-          <div class="col text-end">18</div>
+        <div class="row w-100 mx-0 py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col-6">TOTAL LOSSES</div>
+          <div class="col-6 text-end">18</div>
         </div>
 
-        <div class="row py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
-          <div class="col">WIN PERCENT</div>
-          <div class="col text-end">92.53%</div>
+        <div class="row w-100 mx-0 py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col-6">WIN PERCENT</div>
+          <div class="col-6 text-end">92.53%</div>
         </div>
 
-        <div class="row py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
-          <div class="col">PROFIT SHARE</div>
-          <div class="col text-end">10%</div>
+        <div class="row w-100 mx-0 py-3" style="background-color: #2d3748; border-radius: 8px; margin-bottom: 10px;">
+          <div class="col-6">PROFIT SHARE</div>
+          <div class="col-6 text-end">10%</div>
         </div>
       </div>
 <br>
