--- a/sign-in/copy3.html
+++ b/sign-in/copy3.html
@@ -108,10 +108,6 @@ body {
    <div style="display: flex; justify-content: center; align-items: center; min-height: 120vh; padding: 20px; background-color: #121212;">
   <div class="card text-white" style="width: 100%; background: linear-gradient(90deg, #1a1a2e, #16213e, #1a1a2e); border-radius: 15px; box-shadow: 0 6px 20px rgba(0,0,0,0.6); padding: 1.5rem;">
 
-   
-<div class="d-flex w-100 justify-content-center mb-3">
-  
-</div>
     <!-- Profile Image -->
     <div class="text-center mb-4">
       <img src="../images/dude.png" alt="Dividend Dude" style="width: 140px; height: 140px; border-radius: 50%; border: 2px solid #fff;">
@@ -120,9 +116,10 @@ body {
     <div class="card-body text-center">
       <h4 class="card-title mb-4"><strong>Dividend Dude</strong></h4>
 <div id="liveAlertPlaceholder"></div>
+	    
 <button type="button" class="btn btn-success btn-sm copy-btn px-4 py-2" style="min-width: 200px;" data-message="Successfully Copied!">
     Copy
-  </button>
+  </button><br>
       <!-- Trade Stats with alternating colors -->
       <div class="container text-start">
         <div class="row w-100 mx-0 py-3" style="background-color: #1f2937; border-radius: 8px; margin-bottom: 10px;">
